--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,8 +3,7 @@ version: 0.1.0
 author: Andrew Mezoni <andrew.mezoni@gmail.com>
 description: Semaphore is lightweight data type that is used for controlling access to a common resource inside isolate.
 homepage: https://github.com/mezoni/semaphore
-dev_dependencies:
-  test: any
-
 environment:
-  sdk: '>=1.22.0 <3.0.0'
+  sdk: '>=2.0.0 <3.0.0'
+dev_dependencies:
+  test: 1.3.2
